# commit-msg-gen

./: .gitignore  CLAUDE.md  LICENSE  README.md  hello.txt  pyproject.toml  test_outputs.py
.claude/: settings.local.json
src/: __init__.py  cli.py  config.py  diff_processor.py  git_analyzer.py  llm_client.py  output.py  prompt_builder.py
src/cli/: __init__.py  __main__.py  args.py  commands.py  main.py  utils.py
src/config/: __init__.py
src/git/: __init__.py  analyzer.py  diff_processor.py
src/llm/: __init__.py  base.py  claude.py  ollama.py
src/output/: __init__.py
src/prompts/: __init__.py  builder.py
tests/: test_core.py  test_display.py
